@startuml
skinparam classAttributeIconSize 0

class Transaction {
  + String from
  + String to
  + double amount
  + String sig
}

interface TransactionRule {
  + boolean isValid(Transaction transaction)
  + String getErrorMessage()
}

class CompositeTransactionRule implements TransactionRule {
  - List<String> errors
  - List<TransactionRule> rules
  + boolean isValid(Transaction transaction)
  + String getErrorMessage()
  + List<String> getErrorList()
}

class PositiveAmountRule implements TransactionRule
class SignatureNotEmptyRule implements TransactionRule
class CryptographicSignatureRule implements TransactionRule

class TransactionValidator {
  - TransactionRule rootRule
  + boolean validate(Transaction transaction)
  + String getErrors()
}

class Block {
  + int index
  + long timestamp
  + List<Transaction> transactions
  + String previousHash
  + String hash
  + int nonce
  + String calculateHash()
  + void mineBlock(int difficulty)
}

class Blockchain {
  - List<Block> chain
  - List<Transaction> pendingTransactions
  - TransactionValidator validator
  + boolean addBlock(Block newBlock)
  + boolean createTransaction(Transaction transaction)
  + void minePendingTransactions()
  + boolean resolveConflicts(List<Block> peerChain)
}

class Node {
  - String nodeId
  - List<String> peers
  - Blockchain blockchain
  - TransactionValidator validator
  + void connectToNetwork(String seedUrl)
  + void onTransactionReceived(Transaction transaction)
  + void onBlockReceived(Block block)
  + void broadcastBlock(Block block)
}

' Relationships
Blockchain "1" *-- "*" Block : contains
Blockchain "1" *-- "*" Transaction : pending transactions
Block "1" *-- "*" Transaction : includes
TransactionValidator "1" o-- "1" TransactionRule : uses
Blockchain "1" --> "1" TransactionValidator : uses for validation
Node "1" --> "1" Blockchain : manages
Node "1" --> "1" TransactionValidator : validates incoming traffic
Node "1" o-- "*" Node : connects to peers

@enduml